feat(users): :construction: first attempt of comunication between micros

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
         "app",
-        "notifications"
+        "notifications",
+        "users"
     ]
 }
