--- a/users-microservice/package.json
+++ b/users-microservice/package.json
@@ -28,6 +28,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "11.0.10",
     "@nestjs/platform-express": "^11.0.1",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
