--- a/notifications-microservice/package.json
+++ b/notifications-microservice/package.json
@@ -24,6 +24,7 @@
     "@grpc/grpc-js": "1.12.6",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "4.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "11.0.11",
