--- a/users-microservice/package.json
+++ b/users-microservice/package.json
@@ -24,6 +24,7 @@
     "@grpc/proto-loader": "0.7.13",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "4.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "11.0.10",
