feat(app): :wrench: add config to comunicate deploys with docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,4 @@ services:
     container_name: "notification-service"
     ports:
       - "50052:50052"
+# TODO: crear una env y pasar a través de los micros
