feat: :construction: rabbitmqtt added
run with docker, but in dev is pending

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "conventionalCommits.scopes": [
         "app",
         "notifications",
-        "users"
+        "users",
+        "docker"
     ]
 }
