--- a/users-microservice/package.json
+++ b/users-microservice/package.json
@@ -30,6 +30,8 @@
     "@nestjs/microservices": "11.0.10",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "11.0.6",
+    "amqp-connection-manager": "4.1.14",
+    "amqplib": "0.10.5",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "reflect-metadata": "^0.2.2",
